# matrix_controller

./: Cargo.toml
src/: main.rs  network.rs
src/display/: cake.rs  game_of_life.rs  matrix_displayer.rs  metaballs.rs  mod.rs  rgb8.rs  single.rs  wheel.rs  wrap.rs  ws2812.rs
src/web/: mod.rs
